# agentic-ai-mcp-platform

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  README.md  app.db  fly.toml  mcp.db  pyproject.toml
app/: main.py  mvp_tools.py  mvp_tools_registry.py
app/api/: deps.py  rate_limit.py
app/api/dependencies/: auth.py
app/api/middleware/: correlation.py
app/api/routers/: __init__.py  agent_router.py  demo_router.py  execution_router.py  health.py  health_router.py  rag_router.py  streaming.py  task_router.py  tool_router.py
app/api/v1/: tasks.py
app/bootstrap/: tool_bootstrap.py
app/core/: config.py  db.py  logging.py
app/models/: __init__.py  base.py  task.py
app/repositories/: execution_history_repository.py  execution_trace_repository.py  task_repository.py
app/runtime/: execution_runtime.py  runtime.py
app/schemas/: __init__.py  agent.py  agent_execution_context.py  context.py  execution.py  execution_context.py  execution_event.py  execution_plan.py  execution_strategy.py  execution_trace.py  task.py  tool.py  tool_call.py  tool_execution.py  tool_result.py
app/schemas/agents/: critic_agent.py
app/schemas/rag/: chunk.py  document.py  embedding.py  retrieval.py
app/services/: agent_registry.py  agent_service.py  execution_runtime.py  memory_writer.py  orchestrator.py  plan_interpreter.py  planner_agent.py  planner_executor.py  task_service.py  tool_execution_engine.py  tool_execution_service.py  tool_executor.py  tool_registry.py  tool_validator.py
app/services/execution/: execution_service.py  multi_agent_executor.py  single_agent_executor.py
app/services/rag/: bedrock_embedding_service.py  chroma_adapter.py  chunking_service.py  embedding_service.py  ingestion_service.py  opensearch_vector_store.py  rag_service.py  retrieval_service.py  vector_store.py
app/services/tools/: base.py  echo_tool.py  register_tools.py
app/services/v1/: multi_agent.py
chroma_db/: chroma.sqlite3
docs/: use-case.md
fly-backend/: Dockerfile  fly.toml
frontend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
frontend/config/: settings.py  urls.py
frontend/core/: api_client.py  exceptions.py
frontend/dashboard/: urls.py  views.py
frontend/dashboard/templates/dashboard/: index.html
frontend/tasks/: forms.py  urls.py  views.py
frontend/tasks/templates/tasks/: create.html  detail.html  list.html
frontend/tasks/templates/tasks/partials/: task_row.html  task_table.html
frontend/templates/: base.html
frontend/templates/components/: navbar.html  status_badge.html
frontend/tools/: forms.py  urls.py  views.py
frontend/tools/templates/tools/: detail.html  list.html  register.html
frontend/tools/templates/tools/partials/: tool_table.html
tests/integration/: __init__.py  conftest.py  test_agent_router.py  test_health_router.py  test_task_router.py  test_tool_router.py
tests/unit/: conftest.py  test_phase1_execution.py  test_planner_executor.py  test_tool_execution.py
tests/unit/api/: test_auth.py  test_deps.py  test_execution_router.py  test_middleware.py  test_streaming_router.py
tests/unit/bootstrap/: test_tool_bootstrap.py
tests/unit/core/: test_config.py  test_db.py  test_logging.py
tests/unit/integration/: test_full_pipeline.py  test_tasks_api.py
tests/unit/schemas/: test_agent_execution_context.py  test_critic_agent.py  test_execution_context.py  test_execution_context_schema.py  test_tool_call.py  test_tool_result.py
tests/unit/services/: test_agent_service.py  test_echo_tool.py  test_execution_runtime.py  test_execution_runtime_history.py  test_execution_service.py  test_memory_writer.py  test_multi_agent_executor.py  test_orchestrator.py  test_orchestrator_history.py  test_orchestrator_rag_multi_agent.py  test_planner_agent.py  test_planner_executor_full.py  test_rag_integration.py  test_register_tools.py  test_single_agent_executor.py  test_task_service.py  test_tool_execution_engine.py  test_tool_executor.py  test_tool_registry.py  test_tool_validator.py
