[project]
name = "agentic-ai-mcp-platform"
version = "0.1.0"
description = "Agentic AI MCP Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.101,<0.110",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.23",
    "sqlmodel>=0.0.18",
    "pytest-cov>=7.0.0",
    "chromadb>=1.5.5",
    "slowapi>=0.1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/api/v1/*",
    "app/repositories/*",
    "app/services/tool_execution_service.py",
    "app/services/tools/base.py",
    "app/models/base.py",
    "app/schemas/tool_execution.py",
    # RAG services require external dependencies (AWS Bedrock, ChromaDB)
    "app/services/rag/bedrock_embedding_service.py",
    "app/services/rag/chroma_adapter.py",
    "app/services/rag/ingestion_service.py",
    # v1 multi_agent has interface mismatches
    "app/services/v1/multi_agent.py",
    # Runtime files are not used in current flow
    "app/runtime/*",
    # MVP tools are placeholders
    "app/mvp_tools.py",
    "app/mvp_tools_registry.py",
]

[tool.uv.workspace]
members = [
    "frontend",
]

[dependency-groups]
dev = [
    "httpx>=0.24,<0.28",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
