[project]
name = "agentic-ai-mcp-platform"
version = "0.1.0"
description = "Agentic AI MCP Platform built with Django"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "django>=5.0",
    "gunicorn>=21.2.0",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "config",
    "core",
    "dashboard",
    "tasks",
    "tools"
]

[tool.setuptools.package-data]
"*" = [
    "templates/**/*",
    "static/**/*",
    "*.html"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"